# simple-actix-sqlx-crud-backend

./: .gitignore  Cargo.toml  README.md
migrations/: 20250610090822_todos.sql
src/: auth_validator.rs  config.rs  db.rs  dto.rs  errors.rs  main.rs
src/base/: routes.rs
src/todos/: mod.rs  model.rs  routes.rs
