[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
actix-web-httpauth = "0.8.2"
anyhow = "1.0.98"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio", "tls-native-tls"] }
thiserror = "2.0.12"
